--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "BOT_TOKEN",
+	"token": "NDcwNzA0MDE5NTY0Nzg5Nzcw.Dk8crg.Wao8_cSRbNK4t_6Onzv7AFaNg1g",
 	"prefix": "!",
-	"ytApiKey": "YOUR YOUTUBE API TOKEN HERE"
+    "ytApiKey": "AIzaSyAdORXg7UZUo7sePv97JyoDqtQVi3Ll0b8"
 }
